@@ -22,21 +22,14 @@ import jakarta.validation.Valid;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
 import java.util.List;
 
 import static cn.iocoder.yudao.framework.common.exception.util.ServiceExceptionUtil.exception;
 import static cn.iocoder.yudao.framework.common.pojo.CommonResult.success;
-import static cn.iocoder.yudao.module.wms.enums.ErrorCodeConstants.INVENTORY_NOT_EXISTS;
+import static cn.iocoder.yudao.module.wms.enums.WmsErrorCodeConstants.INVENTORY_NOT_EXISTS;
 
 @Tag(name = "盘点单")
 @RestController
@@ -101,8 +94,8 @@ public class WmsInventoryController {
         List<WmsInventoryBinDO> inventoryBinList = inventoryBinService.selectByInventoryId(inventoryVO.getId());
         inventoryVO.setBinItemList(BeanUtils.toBean(inventoryBinList, WmsInventoryBinRespVO.class));
         // 装配
-        inventoryService.assembleWarehouse(Arrays.asList(inventoryVO));
-        inventoryService.assembleApprovalHistory(Arrays.asList(inventoryVO));
+        inventoryService.assembleWarehouse(List.of(inventoryVO));
+        inventoryService.assembleApprovalHistory(List.of(inventoryVO));
         inventoryBinService.assembleProduct(inventoryVO.getBinItemList());
         inventoryBinService.assembleBin(inventoryVO.getBinItemList());
 
